# malva

./: .gitignore  .gitmodules  CMakeLists.txt  MALVA  Makefile  README.md  _config.yml  argument_parser.cpp  argument_parser.hpp  bloom_filter.hpp  common.cpp  common.hpp  index.md  kmap.hpp  main.cpp  malva_test.cpp  var_block.hpp  variant.hpp  zstdstream.cpp  zstdstream.h
example/: chr20.malva.vcf  haploid.malva.vcf
examples/: Ref.fa  Ref1.fa  Ref2.fa  Ref3.fa  reads1.v1a1.fa  reads1.v1a1.reverse.fa  reads1.v1a1v2a1.fa  reads1.v2a2.fa  vars.vcf  vars1.vcf  vars2.vcf  vars3.vcf
exps/: Snakefile  config.yaml  run_happy.sh
exps/genome-wide/: README.md  Snakefile  config.yaml  get_gatk_resources.sh  get_vcf.sh
exps/gw_test/: Snakefile  config.yaml  format_results.sh
exps/iterative/: README.md  build_second_vcf.py  combine_iterative.py  run_iterative.sh
exps/scripts/: check_ref_vcf.py  clean_vcf.sh  compare_vcfs.py  exam_malva_csv.py  extract_samples.sh  extract_truth.sh  format_vcf_as_dbsnp.py  run_comparator.sh  split_reference.py  vcf_analysis.py
exps/single_chrom/: Snakefile  config.yaml
malva_test/: Makefile  README.md  main.cpp  malva-test  malva.example.vcf  malva_test.cpp  malva_test.hpp
test/: CMakeLists.txt  chr20.malva.vcf  chr20.sample.fa  chr20.vcf  chr20_integration.cpp  haploid.malva.vcf  kmc.out.kmc_pre  kmc.out.kmc_suf
